# crius-jpl

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
crius_jpl/: __init__.py  adapter.py  exceptions.py  service.py  validation.py
tests/: __init__.py  conftest.py  test_adapter.py  test_integration.py  test_performance.py  test_service.py
